kubernetes/lancelot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "25"
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"kompose.cmd":"kompose convert","kompose.version":"1.21.0 ()"},"creationTimestamp":null,"labels":{"io.kompose.service":"arthur"},"name":"arthur","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"io.kompose.service":"arthur"}},"strategy":{},"template":{"metadata":{"annotations":{"kompose.cmd":"kompose convert","kompose.version":"1.21.0 ()"},"creationTimestamp":null,"labels":{"io.kompose.service":"ar [...]
  creationTimestamp: "2020-10-16T16:09:47Z"
  generation: 29
  labels:
    io.kompose.service: arthur
  name: arthur
  namespace: default
  resourceVersion: "7404739"
  selfLink: /apis/apps/v1/namespaces/default/deployments/arthur
  uid: 8e78511c-1d14-40d5-b803-40cdb69488b7
spec:
  progressDeadlineSeconds: 600
  replicas: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      io.kompose.service: arthur
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: arthur
    spec:
      containers:
      - env:
        - name: API_TOKEN_URL
          value: https://accounts.spotify.com/api/token
        - name: BASE_URL
          value: https://api.spotify.com/v1
        - name: FLASK_ENV
          value: development
        - name: MERLIN_BASE_URL
          value: http://34.72.22.187:5005
        image: gcr.io/aerobic-amphora-291504/arthur-api:1.4.0
        imagePullPolicy: IfNotPresent
        name: arthur
        ports:
        - containerPort: 5000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 5
  conditions:
  - lastTransitionTime: "2020-10-28T22:36:42Z"
    lastUpdateTime: "2020-10-28T22:36:42Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2020-10-16T16:09:47Z"
    lastUpdateTime: "2020-10-29T02:10:34Z"
    message: ReplicaSet "arthur-cb5c9755b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 29
  readyReplicas: 5
  replicas: 5
  updatedReplicas: 5
