kubernetes/merlin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "8"
  creationTimestamp: "2020-10-28T17:21:55Z"
  generation: 21
  labels:
    app: merlin
  name: merlin
  namespace: default
  resourceVersion: "7337228"
  selfLink: /apis/apps/v1/namespaces/default/deployments/merlin
  uid: 49dc84b4-d44a-4e13-a50f-1a1ac0504cb5
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: merlin
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: merlin
    spec:
      containers:
      - env:
        - name: FLASK_ENV
          value: development
        image: gcr.io/aerobic-amphora-291504/merlin:1.2.1
        imagePullPolicy: IfNotPresent
        name: merlin-sha256-1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: merlin-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: merlin-storage
        persistentVolumeClaim:
          claimName: merlin-pvc
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2020-10-28T21:09:47Z"
    lastUpdateTime: "2020-10-28T21:09:47Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2020-10-28T17:21:55Z"
    lastUpdateTime: "2020-10-28T21:32:22Z"
    message: ReplicaSet "merlin-f57984647" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 21
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
