kubernetes/flask.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: arthur-api
  name: arthur-api
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: arthur-api
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: arthur-api
    spec:
      containers:
      - image: gcr.io/aerobic-amphora-291504/arthur-api:latest
        imagePullPolicy: Always
        name: arthur-api-1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: arthur-api
  labels:
    service: arthur-api
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32321
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: arthur-api
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
